--- a/index.html
+++ b/index.html
@@ -62,14 +62,15 @@
            <!-- The input box where the user inputs weight value -->
             <div class="form-group center">
               <label for="">Enter Weight:</label>
-              <input  id="user-weight" class="amount form-control" placeholder="Enter wegiht" min="1">
+              <input  id="user-weight" class="amount form-control" placeholder="Enter weight" min="1">
             </div>
-            <!-- The select button to pick a planet and  a weght on that planet -->
+            <!-- The select button to pick a planet and  a weight on that planet -->
             <div class="form-group inline-block">
               <label for="">From planets:</label>
               <select  id="planets"   class="currency-list form-control">
                 <option>--Select--</option>
               </select>
+              <br />
              <!-- The results of the calculation -->
               <button type="button" id="calculate-button">Calculate Weight</button>
             </div>
